--- a/config.json
+++ b/config.json
@@ -1,9 +1,1 @@
-{
-    "token": "NTMwODIyOTU0NTQ0NzkxNTYy.DxFBXw.8MUx2_vfGiOclfRscmcSOLNaEuA",
-    "bot": {
-      "plugins": [
-        "plugins.archive",
-        "plugins.help"
-      ]
-    }
-  }
+{"token": "", "bot": {"plugins": ["plugins.archive", "plugins.help"]}}
